# HiddenHearingLossEfficientCoding

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: reproduction.yaml
data/: MANIFEST.csv
data/artifacts/: CHL_bootstrap.parquet  CHL_bootstrap_5000.parquet  CHL_stg.parquet  HHL_bootstrap.parquet  HHL_bootstrap_5000.parquet  HHL_high_bootstrap.parquet  HHL_high_bootstrap_5000.parquet  HHL_low_bootstrap.parquet  HHL_low_bootstrap_5000.parquet  HHL_stg.parquet  df_mi_pdf.parquet  df_mi_stats.parquet  empirical_lme.csv  example_stimlevels.npy  rlfs_CHL.parquet  rlfs_HHL.parquet
data/captions/: figure_captions.json
data/derived/tables/: bootstrap_contrasts.csv  empirical_tests.csv  rendered_tables.txt  threshold_quantile_profile.csv
scripts/: build_rlfs.py  compute_mi.py  empirical_lme.py  fit_stg.py  render_tables.py  reproduce_tables.py  run_bootstrap.py  threshold_quantile_profile.py
scripts/lib/: empirical.py  paths.py  posterior.py  processing.py  raw_registry.py  tables.py
scripts/panels/: figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  panel_shared.py
